cluster-resources/services/gitea/gitea-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
  namespace: gitea
spec:
  selector:
    app.kubernetes.io/name: gitea
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
