cluster-resources/services/gitea/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: gitea
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
